<resources>
    <string name="app_name">FurniCart</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Welcomeheading">Welcome</string>
    <string name="Welcomesubheading">Please login with your credentials</string>
    <string name="Email">E-mail</string>
    <string name="Password">Password</string>
    <string name="Loginbtntext">Login</string>
    <string name="notRegisteredtxt">Not registered yet , Sign UP</string>
    <string name="createAccountHeading">Create Account</string>
    <string name="signupSubheading">to get started now</string>
    <string name="signupBtnText" />
    <string name="settingsBtn">Profile Settings</string>
    <string name="orderHistoryTextView">Order History</string>
    <string name="newsletterTxt">Newsletter Subscription</string>
    <string name="returnTxt">Returns and Refunds</string>
    <string name="customerSupportText">Customer Support</string>
    <string name="paymentMethodsText">Payment Methods</string>
    <string name="logoutText">Logout</string>

</resources>