<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEF5E7"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="404dp"
        android:layout_height="365dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/furnicartlogo" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Welcomeheading"
                android:textColor="#FEA100"
                android:textSize="38dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/Welcomesubheading" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="26dp"/>

            <TextView
                android:id="@+id/emailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Email"
                android:textColor="#FEA100"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTextEmailAddress3"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:ems="10"
                android:hint="Enter your Email address"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/done"/>

            <TextView
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Password"
                android:textColor="#FEA100"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:ems="10"
                android:hint="Enter your Password"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/password_icon"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>